Guice-ified the Commit item view so that it's imagesession is less obtrusive

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>android-viewholder-listviews</artifactId>
-			<version>0.2</version>
+			<version>0.3-SNAPSHOT</version>
 		</dependency>
         <dependency>
 			<groupId>com.madgag</groupId>
