Use android-pinned-header-listviews for the commit diff list- closes #3
https://github.com/rtyley/android-pinned-header-listviews

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -22,6 +22,12 @@
 		</dependency>
         <dependency>
 			<groupId>com.madgag</groupId>
+			<artifactId>android-pinned-header-listviews</artifactId>
+			<version>0.2-SNAPSHOT</version>
+            <type>apklib</type>
+		</dependency>
+        <dependency>
+			<groupId>com.madgag</groupId>
 			<artifactId>lazy-drawables</artifactId>
 			<version>0.8</version>
 		</dependency>
