change sync process name (still not sure why it needs own process)
...definitely do NOT want to be confused with contacts (Agit currently
shows on my phone as a place to sync phone numbers to!..???)

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -92,7 +92,7 @@
         </service>
 
         <service android:name=".sync.AgitSyncAdapterService"
-         android:exported="true" android:process=":contacts">
+         android:exported="true" android:process=":repos">
          <intent-filter>
           <action android:name="android.content.SyncAdapter" />
          </intent-filter>
