--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.madgag.agit"
 	android:installLocation="preferExternal"
-	android:versionCode="1"
-	android:versionName="1.0">
+	android:versionCode="2"
+	android:versionName="1.1">
 	<application
 		android:name="com.madgag.agit.AgitApplication"
 		android:theme="@style/Theme.App"
@@ -11,10 +11,23 @@
 		android:label="@string/app_name"
 		android:debuggable="true">
 
-		<activity android:name="RepositoryManagementActivity"
+        <activity android:name="DashboardActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name="AboutActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+		<activity android:name="RepositoryViewerActivity"
 			android:label="@string/app_name">
 			<intent-filter>
-				<action android:name="git.repo.MANAGE" />
+				<action android:name="org.openintents.git.repo.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 			<intent-filter>
@@ -25,32 +38,53 @@
 
 		<activity android:name="RDTypeListActivity">
 			<intent-filter>
-				<action android:name="git.remote.LIST" />
+				<action android:name="org.openintents.git.remote.LIST" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 			<intent-filter>
-				<action android:name="git.tag.LIST" />
+				<action android:name="org.openintents.git.tag.LIST" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
 
         <activity android:name="RDTBranchListActivity">
 			<intent-filter>
-				<action android:name="git.branch.LIST" />
+				<action android:name="org.openintents.git.branch.LIST" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
+
+        <activity android:name="BranchViewer">
+			<intent-filter>
+				<action android:name="org.openintents.git.branch.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
+
+		<activity android:name="TagViewer">
+			<intent-filter>
+				<action android:name="org.openintents.git.tag.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
+
+		<activity android:name="CommitViewerActivity">
+			<intent-filter>
+				<action android:name="org.openintents.git.commit.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
 
 		<activity android:name="CloneLauncherActivity">
 			<intent-filter>
-				<action android:name="com.madgag.git.clone.prepare" />
+				<action android:name="org.openintents.git.clone.PREPARE" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
 
-        <activity android:name=".SuggestRepoActivity">
+        <activity android:name="SuggestRepoActivity">
 			<intent-filter>
-				<action android:name="com.madgag.git.repo.suggest" />
+				<action android:name="org.openintents.git.repo.SUGGEST" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
@@ -75,10 +109,10 @@
 
 		<service android:name="GitOperationsService">
 			<intent-filter>
-				<action android:name="git.FETCH" />
+				<action android:name="org.openintents.git.FETCH" />
 			</intent-filter>
 			<intent-filter>
-				<action android:name="git.CLONE" />
+				<action android:name="org.openintents.git.CLONE" />
 			</intent-filter>
 		</service>
 
@@ -107,46 +141,7 @@
 
 		<provider android:name="GitInfoProvider" android:authorities="com.madgag.agit.gitinfoprovider"></provider>
 
-		<activity android:name="BranchViewer">
-			<intent-filter>
-				<action android:name="git.branch.VIEW" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
 
-		<activity android:name="TagViewer">
-			<intent-filter>
-				<action android:name="git.tag.VIEW" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
-
-        <activity android:name="DashboardActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name="AboutActivity">
-            <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-		<activity android:name="RepositoryListActivity">
-			<intent-filter>
-				<action android:name="git.repo.LIST" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
-
-		<activity android:name="CommitViewerActivity">
-			<intent-filter>
-				<action android:name="git.view.COMMIT" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
 	</application>
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="10"/>
 
@@ -159,5 +154,6 @@
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_SYNC_STATS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
 </manifest> 
