--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -17,7 +17,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.madgag</groupId>
-			<artifactId>toy-ssh-agent</artifactId>
+			<artifactId>toy-ssh-agent</artifactId> <!-- Needs to come before Agit -->
 			<version>1.3</version>
 			<type>apk</type>
 		</dependency>
