--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+    <scm>
+        <connection>scm:git:git@github.com:rtyley/agit.git</connection>
+        <developerConnection>scm:git:git@github.com:rtyley/agit.git</developerConnection>
+        <url>git@github.com:rtyley/agit.git</url>
+    </scm>
 	<dependencies>
 		<dependency>
 			<groupId>com.google.android</groupId>
