Want to do a 'release' without deploying to a maven repo...
Just want to tag and increment pom versions really...

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,20 @@
     <build>
         <pluginManagement>
             <plugins>
+                  <plugin>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.1</version>
+                    <configuration>
+                      <!--
+                        During release:perform, enable the "release" profile
+                       -->
+                      <releaseProfiles>release</releaseProfiles>
+                      <goals>package</goals>
+                    </configuration>
+                  </plugin>
+
+
+
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>maven-android-plugin</artifactId>
