--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<version>1.1-SNAPSHOT</version>
 	<groupId>com.madgag</groupId>
 	<artifactId>agit</artifactId>
 
@@ -50,7 +49,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>agit-test-utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
         <dependency>
