try not to wipe out the signed-zipaligned build

--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
                         During release:perform, enable the "release" profile
                        -->
                       <releaseProfiles>release</releaseProfiles>
-                      <goals>package</goals>
+                      <goals>validate</goals>
                     </configuration>
                   </plugin>
 
