--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<version>1.4</version>
+	<version>1.5-SNAPSHOT</version>
 	<groupId>com.madgag</groupId>
 	<artifactId>agit-parent</artifactId>
 	<packaging>pom</packaging>
