--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>agit</artifactId>
 
 	<parent>
-		<version>1.5-SNAPSHOT</version>
+		<version>1.5</version>
 		<groupId>com.madgag</groupId>
 		<artifactId>agit-parent</artifactId>
 	</parent>
