--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -95,6 +95,7 @@
 				<category android:name="android.intent.category.BROWSABLE"></category>
                 <action android:name="android.intent.action.VIEW"></action>
 				<data android:host="github.com" android:scheme="https" android:pathPattern="/.*/.*" />
+				<data android:host="github.com" android:scheme="http" android:pathPattern="/.*/.*" />
 			</intent-filter>
 		</activity>
 
@@ -103,6 +104,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE"></category>
                 <action android:name="android.intent.action.VIEW"></action>
+				<data android:host="gitorious.org" android:scheme="https" android:pathPattern="/.*/.*" />
 				<data android:host="gitorious.org" android:scheme="http" android:pathPattern="/.*/.*" />
 			</intent-filter>
 		</activity>
