Fix #22 : 'About' Markdown crashes on pre-Gingerbread devices
Using markdownj rather than markdownpapers to avoid dependency on Deque
class which is not available pre-Gingerbread

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -100,9 +100,9 @@
             <version>1.6.1</version>
         </dependency>
         <dependency>
-            <groupId>org.tautua.markdownpapers</groupId>
-            <artifactId>markdownpapers-core</artifactId>
-            <version>1.0.0</version>
+            <groupId>com.madgag</groupId>
+            <artifactId>markdownj-core</artifactId>
+            <version>0.4.1</version>
         </dependency>
 	</dependencies>
 	<build>
