--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>agit-tests</artifactId>
 
 	<parent>
-		<version>1.9</version>
+		<version>1.10-SNAPSHOT</version>
 		<groupId>com.madgag</groupId>
 		<artifactId>agit-parent</artifactId>
 	</parent>
