Specify cargo version in hope that'll make the cross-compile work...

--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -97,6 +97,7 @@
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
 				<artifactId>cargo-maven2-plugin</artifactId>
+                <version>1.1.1</version>
 				<executions>
 					<execution>
 						<id>start-container</id>
