Guide users to setup an ssh-agent if they try to do a clone of an ssh url
As a bit of bonus feature, also display the transport protocol implied by
the url.

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -24,6 +24,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".AboutUsingSshActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
 		<activity android:name="RepositoryViewerActivity"
 			android:label="@string/app_name">
 			<intent-filter>
