double whoops - and rosa pointed it out too...

--- a/pom.xml
+++ b/pom.xml
@@ -245,7 +245,7 @@
             <modules>
                 <module>agit-test-utils</module>
                 <module>agit</module>
-                <module>agit-tests</module>
+                <module>agit-integration-tests</module>
             </modules>
         </profile>
         <profile>
