--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>maven-android-plugin</artifactId>
-                    <version>2.9.0-beta-5</version>
+                    <version>3.0.0-alpha-2</version>
                     <extensions>true</extensions>
                     <configuration>
                         <jvmArguments>
