--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<packaging>apk</packaging>
-	<name>Agit - git client for Android</name>
+	<name>Agit - Git client for Android</name>
 	<dependencies>
 		<dependency>
 			<groupId>com.madgag</groupId>
