--- a/pom.xml
+++ b/pom.xml
@@ -88,12 +88,13 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.1</version>
+                    <version>2.2</version>
                     <configuration>
                         <!--
                          During release:perform, enable the "release" profile
                         -->
                         <releaseProfiles>release</releaseProfiles>
+                        <preparationGoals>clean verify version-update</preparationGoals>
                     </configuration>
                 </plugin>
                 <plugin>
