--- a/agit-integration-tests/pom.xml
+++ b/agit-integration-tests/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>agit-integration-tests</artifactId>
 
 	<parent>
-		<version>1.14-SNAPSHOT</version>
+		<version>1.14</version>
 		<groupId>com.madgag</groupId>
 		<artifactId>agit-parent</artifactId>
 	</parent>
