--- a/agit-test-utils/pom.xml
+++ b/agit-test-utils/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>agit-test-utils</artifactId>
 
 	<parent>
-		<version>1.14-SNAPSHOT</version>
+		<version>1.14</version>
 		<groupId>com.madgag</groupId>
 		<artifactId>agit-parent</artifactId>
 	</parent>
