Slightly better DI for PromptBroker et al
com.madgag.android.blockingprompt gradually becoming more generic-ish

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,7 @@
                             </option>
 
                             <option>-keep class com.madgag.agit.**</option>
+                            <option>-keep class com.madgag.android.blockingprompt.**</option>
 
                             <option>-keep public class * extends android.app.Activity</option>
                             <option>-keep public class * extends android.app.Application</option>
