--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -128,18 +128,19 @@
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 				<artifactId>maven-android-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <id>update-version</id>
-                            <goals>
-                                <goal>version-update</goal>
-                            </goals>
-                            <configuration>
-                                <versionCodeAutoIncrement>true</versionCodeAutoIncrement>
-                                <versionNameUpdate>true</versionNameUpdate>
-                            </configuration>
-                        </execution>
-                    </executions>
+                <inherited>true</inherited>
+                <executions>
+                    <execution>
+                        <id>update-version</id>
+                        <goals>
+                            <goal>version-update</goal>
+                        </goals>
+                        <configuration>
+                            <versionCodeAutoIncrement>true</versionCodeAutoIncrement>
+                            <versionNameUpdate>true</versionNameUpdate>
+                        </configuration>
+                    </execution>
+                </executions>
 			</plugin>
             <plugin>
                 <groupId>com.pyx4me</groupId>
