--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -114,6 +114,16 @@
 				<data android:host="gitorious.org" android:scheme="http" android:pathPattern="/.*/.*" />
 			</intent-filter>
 		</activity>
+        
+        <activity android:name=".weblaunchers.GoogleCodeWebLaunchActivity" android:label="@string/app_name">
+			<intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE"></category>
+                <action android:name="android.intent.action.VIEW"></action>
+				<data android:host="code.google.com" android:scheme="https" android:pathPattern="/p/.*" />
+				<data android:host="code.google.com" android:scheme="http" android:pathPattern="/p/.*" />
+			</intent-filter>
+		</activity>
 
 		<service android:name="GitOperationsService">
 			<intent-filter>
