--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -120,8 +120,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE"></category>
                 <action android:name="android.intent.action.VIEW"></action>
-				<data android:host="code.google.com" android:scheme="https" android:pathPattern="/p/.*" />
-				<data android:host="code.google.com" android:scheme="http" android:pathPattern="/p/.*" />
+				<data android:host="code.google.com" android:scheme="https" android:pathPattern="/p/.*/source/checkout" />
+				<data android:host="code.google.com" android:scheme="http" android:pathPattern="/p/.*/source/checkout" />
 			</intent-filter>
 		</activity>
 
