Change the 'fetch' intent into a 'repo.SYNC' intent to *pull* non-bare (issue #37)
The explicit fetch intent is removed for now - the SYNC intent will still just do a fetch
if it's a bare repo.

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -127,7 +127,7 @@
 
 		<service android:name="GitOperationsService">
 			<intent-filter>
-				<action android:name="org.openintents.git.FETCH" />
+				<action android:name="org.openintents.git.repo.SYNC" />
 			</intent-filter>
 			<intent-filter>
 				<action android:name="org.openintents.git.CLONE" />
