Support launching Clone activity from 'git://' protocol links - fixes #53
Alex Austin supplied this page as an example that links directly to both
'git://' and 'ssh://' urls:

http://cgit.freedesktop.org/libreoffice/artwork/

links to:

git://anongit.freedesktop.org/libreoffice/artwork

ssh://git.freedesktop.org/git/libreoffice/artwork

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -95,6 +95,16 @@
 			</intent-filter>
 		</activity>
 
+        <activity android:name=".weblaunchers.GitProtocolLaunchActivity" android:label="@string/app_name">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE"></category>
+                <action android:name="android.intent.action.VIEW"></action>
+                <data android:scheme="git" />
+                <data android:scheme="ssh" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".weblaunchers.GitHubWebLaunchActivity" android:label="@string/app_name">
 			<intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
